Allow the admin to also comment. Add break on the title to prevent the title from breaking.Made all the mat-icon to turn orange when hovered on.

--- a/src/app/components/blogs/blogs.component.sass
+++ b/src/app/components/blogs/blogs.component.sass
@@ -26,4 +26,4 @@ $primary_color: #FE512A
     stroke: $primary_color
 
 .spacing
-    letter-spacing: 2px
+    letter-spacing: 0.08em
