--- a/src/styles.sass
+++ b/src/styles.sass
@@ -23,3 +23,5 @@ $primary_color: #FE512A
 button:focus, button:active:focus, button.active:focus 
     outline: none !important
     outline-style: none !important
+mat-icon:hover
+    color: $primary_color
